JUnits and refactoring